Make some changes in the way context(s) are managed and used.
This is a fundamental change in the way I'm using the context
API for this.  Instead of an object for a single context, use
multiple contexts where each one manages one and only one
state.

- BombayContext becomes BombayLoginContext.  It only manages
  the login state.

- Create a Context directory to keep all the contexts. Move
  the existing context into that directory and create the
  new ones there as well.

- Add the BombayModeContext to manage the mode state.

- Add a BombayUtilityContext to allow easy access to
  setter functions required to change state.

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "test:debug": "react-scripts --inspect-brk=mriehle.com:3001 test --runInBand --no-cache",
+    "test:debug": "react-scripts --inspect-brk=127.0.0.1:3001 test --runInBand --no-cache",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
