UpdatePackages and fix VSCode settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,2 +1,14 @@
 {
+  "typescript.validate.enable": false,
+  "javascript.validate.enable": true,
+  "typescript.preferences.includePackageJsonAutoImports": "off",
+  "typescript.suggest.autoImports": false,
+  "typescript.updateImportsOnFileMove.enabled": "never",
+  "files.associations": {
+    "*.js": "javascript",
+    "*.jsx": "javascriptreact"
+  },
+  "emmet.includeLanguages": {
+    "javascript": "javascriptreact"
+  }
 }
