--- a/package.json
+++ b/package.json
@@ -3,33 +3,26 @@
   "version": "0.2.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@babel/eslint-parser": "^7.28.0",
     "casual": "^1.6.2",
-    "formik": "^2.2.9",
-    "jwt-decode": "^3.1.2",
-    "mock-xmlhttprequest": "^8.1.0",
+    "formik": "^2.4.6",
+    "jwt-decode": "^4.0.0",
+    "mock-xmlhttprequest": "^8.4.1",
     "prop-types": "^15.8.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.3.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "react-router-dom": "^7.8.2",
     "react-scripts": "5.0.1",
-    "sass": "^1.54.8",
-    "web-vitals": "^2.1.4"
+    "sass": "^1.90.0",
+    "web-vitals": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start .env .env.local",
     "build": "react-scripts build .env .env.local",
     "test": "react-scripts test",
     "test:debug": "react-scripts --inspect-brk=127.0.0.1:3001 test --runInBand --no-cache",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "eject": "react-scripts eject",
+    "eslint": "eslint --fix ./src"
   },
   "browserslist": {
     "production": [
@@ -42,5 +35,20 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-transform-runtime": "^7.28.3",
+    "@babel/preset-env": "^7.28.3",
+    "@babel/preset-react": "^7.27.1",
+    "@eslint/js": "^9.34.0",
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "eslint-plugin-no-only-tests": "^3.3.0",
+    "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint": "^9.34.0",
+    "globals": "^16.3.0"
   }
 }
