--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
     "*.js": "javascript",
     "*.jsx": "javascriptreact"
   },
+  "typescript.preferences.includePackageJsonAutoImports": "off",
   "emmet.includeLanguages": {
     "javascript": "javascriptreact"
   }
