Issue 72 - Big Model refactor
- Cleanup the typescript stuff in the models.
- Overhaul the instantiation of models.
- More and better test infrastructure.
- Convert `useModelCollection` to typescript.
- Change the way `useModelCollection` is used.
- Fix most of the tests.
- Get the lists using the new model APIs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,16 @@
 {
-  "typescript.validate.enable": false,
+  "typescript.validate.enable": true,
   "javascript.validate.enable": true,
-  "typescript.preferences.includePackageJsonAutoImports": "off",
-  "typescript.suggest.autoImports": false,
-  "typescript.updateImportsOnFileMove.enabled": "never",
+  "typescript.preferences.includePackageJsonAutoImports": "auto",
+  "typescript.suggest.autoImports": true,
+  "typescript.updateImportsOnFileMove.enabled": "prompt",
+  "typescript.tsserver.experimental.enableProjectDiagnostics": true,
   "files.associations": {
     "*.js": "javascript",
-    "*.jsx": "javascriptreact"
+    "*.jsx": "javascriptreact",
+    "*.ts": "typescript",
+    "*.tsx": "typescriptreact"
   },
-  "typescript.preferences.includePackageJsonAutoImports": "off",
   "emmet.includeLanguages": {
     "javascript": "javascriptreact"
   }
