Issue 78 - Compiles under webpack and runs under webpack server
- Ejected from create-react-app.
- Webpack config cleaned up and working.
- The app is running under webpack server.
- I think I have removed create-react-app alogether.

--- a/.env
+++ b/.env
@@ -7,3 +7,5 @@ REACT_APP_SERVER_PROTOCOL=http
 REACT_APP_SERVER_HOST=localhost
 REACT_APP_SERVER_BASE_PATH=
 REACT_APP_SERVER_PORT=2001
+
+NODE_ENV=development
