--- a/package.json
+++ b/package.json
@@ -6,29 +6,75 @@
   },
   "private": true,
   "dependencies": {
-    "@babel/eslint-parser": "^7.28.0",
+    "@babel/core": "^7.28.4",
+    "@babel/eslint-parser": "^7.28.4",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.6.1",
+    "@svgr/webpack": "^8.1.0",
+    "babel-jest": "^30.1.2",
+    "babel-loader": "^10.0.0",
+    "babel-plugin-named-asset-import": "^0.3.8",
+    "bfj": "^9.1.2",
+    "browserslist": "^4.25.4",
+    "camelcase": "^8.0.0",
+    "case-sensitive-paths-webpack-plugin": "^2.4.0",
     "casual": "^1.6.2",
-    "dompurify": "^3.2.0",
+    "css-loader": "^7.1.2",
+    "css-minimizer-webpack-plugin": "^7.0.2",
+    "dompurify": "^3.2.6",
+    "dotenv": "^17.2.2",
+    "dotenv-expand": "^12.0.3",
+    "eslint": "^9.35.0",
+    "eslint-webpack-plugin": "^5.0.2",
+    "file-loader": "^6.2.0",
     "formik": "^2.4.6",
+    "fs-extra": "^11.3.1",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^30.1.3",
+    "jest-resolve": "^30.1.3",
+    "jest-watch-typeahead": "^3.0.1",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
+    "mini-css-extract-plugin": "^2.9.4",
     "mock-xmlhttprequest": "^8.4.1",
+    "postcss": "^8.5.6",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-loader": "^8.2.0",
+    "postcss-normalize": "^13.0.1",
+    "postcss-preset-env": "^10.3.1",
+    "prompts": "^2.4.2",
     "prop-types": "^15.8.1",
     "react": "^19.1.1",
+    "react-dev-utils": "^12.0.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
+    "react-refresh": "^0.17.0",
     "react-router": "^7.8.2",
-    "react-scripts": "5.0.1",
-    "sass": "^1.91.0",
-    "web-vitals": "^5.1.0"
+    "resolve": "^1.22.10",
+    "resolve-url-loader": "^5.0.0",
+    "sass": "^1.92.1",
+    "sass-loader": "^16.0.5",
+    "semver": "^7.7.2",
+    "source-map-loader": "^5.0.0",
+    "style-loader": "^4.0.0",
+    "tailwindcss": "^4.1.13",
+    "terser-webpack-plugin": "^5.3.14",
+    "web-vitals": "^5.1.0",
+    "webpack": "^5.101.3",
+    "webpack-dev-server": "^5.2.2",
+    "webpack-manifest-plugin": "^5.0.1",
+    "workbox-webpack-plugin": "^7.3.0"
   },
   "scripts": {
-    "start": "react-scripts start .env .env.local",
-    "build": "react-scripts build .env .env.local",
-    "test:watch": "react-scripts test",
-    "test:debug": "react-scripts --inspect-brk=127.0.0.1:3001 test --runInBand --no-cache",
+    "old:start": "node scripts/start.js .env .env.local",
+    "old:build": "node scripts/build.js .env .env.local",
+    "old:test:watch": "node scripts/test.js",
+    "old:test:debug": "react-scripts --inspect-brk=127.0.0.1:3001 test --runInBand --no-cache",
+    "start:docker": "webpack server --config webpack.dev.js --port 3000 --host 0.0.0.0",
+    "start": "webpack server --config webpack.dev.js --port 3000",
+    "build": "webpack --config webpack.dev.js",
     "test": "jest --config ./jest.config.js --runInBand --no-cache",
-    "eject": "react-scripts eject",
+    "test:watch": "jest --config ./jest.config.js --runInBand --no-cache --watch",
+    "test:quiet": "jest --config ./jest.config.js --runInBand --no-cache --reporters='jest-silent-reporter' --reporters='summary' ",
     "eslint": "eslint --fix ./src"
   },
   "browserslist": {
@@ -49,12 +95,12 @@
     "@babel/plugin-transform-runtime": "^7.28.3",
     "@babel/preset-env": "^7.28.3",
     "@babel/preset-react": "^7.27.1",
-    "@eslint/js": "^9.34.0",
+    "@eslint/js": "^9.35.0",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/auth0-js": "^9.21.6",
-    "@types/chrome": "^0.1.4",
+    "@types/chrome": "^0.1.9",
     "@types/currency-formatter": "1.5.4",
     "@types/enzyme-adapter-react-16": "^1.0.9",
     "@types/jest": "30.0.0",
@@ -72,12 +118,14 @@
     "@types/react-test-renderer": "19.1.0",
     "@types/universal-cookie": "^3.0.0",
     "@types/uuid": "^10.0.0",
-    "@types/validator": "^13.15.2",
+    "@types/validator": "^13.15.3",
     "@types/webextension-polyfill": "^0.12.3",
-    "@typescript-eslint/eslint-plugin": "8.41.0",
-    "@typescript-eslint/parser": "8.41.0",
+    "@typescript-eslint/eslint-plugin": "8.43.0",
+    "@typescript-eslint/parser": "8.43.0",
     "babel-jest": "^30.1.1",
     "classnames": "^2.5.1",
+    "copy-webpack-plugin": "^13.0.1",
+    "dotenv-webpack": "^8.1.1",
     "eslint": "^9.34.0",
     "eslint-config-prettier": "10.1.8",
     "eslint-plugin-jsx-a11y": "6.10.2",
@@ -85,10 +133,14 @@
     "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-react": "^7.37.5",
     "get-browser-fingerprint": "^4.1.1",
-    "globals": "^16.3.0",
+    "globals": "^16.4.0",
+    "html-webpack-plugin": "^5.6.4",
     "jest": "^30.1.1",
     "jest-css-modules-transform": "^4.4.2",
-    "jest-environment-jsdom": "^30.1.1",
-    "text-encoding": "^0.7.0"
+    "jest-environment-jsdom": "^30.1.2",
+    "jest-silent-reporter": "^0.6.0",
+    "text-encoding": "^0.7.0",
+    "ts-loader": "^9.5.4",
+    "webpack-cli": "^6.0.1"
   }
 }
