--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "start:docker": "webpack server --config webpack.dev.js --port 3000 --host 0.0.0.0",
     "start": "webpack server --config webpack.dev.js --port 3000",
     "build": "webpack --config webpack.dev.js",
+    "build:prod": "webpack --config webpack.prod.js",
     "test": "jest --config ./jest.config.js --runInBand --no-cache",
     "test:watch": "jest --config ./jest.config.js --runInBand --no-cache --watch",
     "test:quiet": "jest --config ./jest.config.js --runInBand --no-cache --reporters='jest-silent-reporter' --reporters='summary' ",
