Fix the build - Path name manipulation was way wrong.

--- a/.env.development
+++ b/.env.development
@@ -2,10 +2,8 @@
 #
 # This file contains default, development values.  They should be
 # overriden as necessary in env.local
-REACT_APP_ROUTER_BASE=/
-REACT_APP_SERVER_PROTOCOL=http
-REACT_APP_SERVER_HOST=localhost
-REACT_APP_SERVER_BASE_PATH=
-REACT_APP_SERVER_PORT=2001
+CLIENT_ROUTER_BASE=/
+SERVER=http://localhost:2001
+SERVER_BASE_PATH=default
 
 NODE_ENV=development
