--- a/.env.production
+++ b/.env.production
@@ -7,8 +7,8 @@
 # "homepage": "htps://mriehle.com/bombay_client/",
 #
 # Be sure to replace 'mriehle.com' with your server name.
-REACT_APP_ROUTER_BASE=/bombay_client
-REACT_APP_SERVER_PROTOCOL=https
-REACT_APP_SERVER_HOST=www.mriehle.com
-REACT_APP_SERVER_BASE_PATH=bombay_server
-REACT_APP_SERVER_PORT=null
+CLIENT_ROUTER_BASE=/bombay_client
+SERVER=https://www.mriehle.com
+SERVER_BASE_PATH=bombay_server
+
+NODE_ENV=production
