--- a/package.json
+++ b/package.json
@@ -74,7 +74,9 @@
     "test:debug": "node node_modules/.bin/jest --config ./jest.config.js --runInBand --no-cache",
     "test:watch": "jest --config ./jest.config.js --runInBand --no-cache --watch",
     "test:quiet": "jest --config ./jest.config.js --runInBand --no-cache --reporters='jest-silent-reporter' --reporters='summary' ",
-    "eslint": "eslint --fix ./src"
+    "eslint": "eslint --fix ./src",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "browserslist": {
     "production": [
@@ -95,6 +97,10 @@
     "@babel/preset-env": "^7.28.3",
     "@babel/preset-react": "^7.27.1",
     "@eslint/js": "^9.35.0",
+    "@storybook/addon-docs": "^9.1.5",
+    "@storybook/addon-onboarding": "^9.1.5",
+    "@storybook/addon-webpack5-compiler-swc": "^4.0.1",
+    "@storybook/react-webpack5": "^9.1.5",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
@@ -131,6 +137,7 @@
     "eslint-plugin-no-only-tests": "^3.3.0",
     "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-storybook": "^9.1.5",
     "get-browser-fingerprint": "^4.1.1",
     "globals": "^16.4.0",
     "html-webpack-plugin": "^5.6.4",
@@ -138,6 +145,7 @@
     "jest-css-modules-transform": "^4.4.2",
     "jest-environment-jsdom": "^30.1.2",
     "jest-silent-reporter": "^0.6.0",
+    "storybook": "^9.1.5",
     "text-encoding": "^0.7.0",
     "ts-loader": "^9.5.4",
     "webpack-cli": "^6.0.1"
