--- a/package.json
+++ b/package.json
@@ -18,8 +18,6 @@
     "browserslist": "^4.25.4",
     "camelcase": "^8.0.0",
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
-    "casual": "^1.6.2",
-    "css-loader": "^7.1.2",
     "css-minimizer-webpack-plugin": "^7.0.2",
     "dompurify": "^3.2.6",
     "dotenv": "^17.2.2",
@@ -30,9 +28,6 @@
     "formik": "^2.4.6",
     "fs-extra": "^11.3.1",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^30.1.3",
-    "jest-resolve": "^30.1.3",
-    "jest-watch-typeahead": "^3.0.1",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "mini-css-extract-plugin": "^2.9.4",
@@ -53,10 +48,8 @@
     "resolve": "^1.22.10",
     "resolve-url-loader": "^5.0.0",
     "sass": "^1.92.1",
-    "sass-loader": "^16.0.5",
     "semver": "^7.7.2",
     "source-map-loader": "^5.0.0",
-    "style-loader": "^4.0.0",
     "tailwindcss": "^4.1.13",
     "terser-webpack-plugin": "^5.3.14",
     "web-vitals": "^5.1.0",
@@ -75,7 +68,7 @@
     "test:watch": "jest --config ./jest.config.js --runInBand --no-cache --watch",
     "test:quiet": "jest --config ./jest.config.js --runInBand --no-cache --reporters='jest-silent-reporter' --reporters='summary' ",
     "eslint": "eslint --fix ./src",
-    "storybook": "storybook dev -p 6006",
+    "storybook": "storybook dev -p 6006 --no-open",
     "build-storybook": "storybook build"
   },
   "browserslist": {
@@ -99,6 +92,7 @@
     "@eslint/js": "^9.35.0",
     "@storybook/addon-docs": "^9.1.5",
     "@storybook/addon-onboarding": "^9.1.5",
+    "@storybook/addon-styling-webpack": "^2.0.0",
     "@storybook/addon-webpack5-compiler-swc": "^4.0.1",
     "@storybook/react-webpack5": "^9.1.5",
     "@testing-library/jest-dom": "^6.8.0",
@@ -130,6 +124,7 @@
     "babel-jest": "^30.1.1",
     "classnames": "^2.5.1",
     "copy-webpack-plugin": "^13.0.1",
+    "css-loader": "^7.1.2",
     "dotenv-webpack": "^8.1.1",
     "eslint": "^9.34.0",
     "eslint-config-prettier": "10.1.8",
@@ -141,13 +136,25 @@
     "get-browser-fingerprint": "^4.1.1",
     "globals": "^16.4.0",
     "html-webpack-plugin": "^5.6.4",
-    "jest": "^30.1.1",
+    "jest": "^30.1.3",
     "jest-css-modules-transform": "^4.4.2",
     "jest-environment-jsdom": "^30.1.2",
+    "jest-fixed-jsdom": "^0.0.10",
+    "jest-resolve": "^30.1.3",
     "jest-silent-reporter": "^0.6.0",
+    "jest-watch-typeahead": "^3.0.1",
+    "msw": "^2.11.2",
+    "msw-storybook-addon": "^2.0.5",
+    "sass-loader": "^16.0.5",
     "storybook": "^9.1.5",
+    "style-loader": "^4.0.0",
     "text-encoding": "^0.7.0",
     "ts-loader": "^9.5.4",
     "webpack-cli": "^6.0.1"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
