--- a/package.json
+++ b/package.json
@@ -105,11 +105,12 @@
     "@types/jest": "30.0.0",
     "@types/js-cookie": "^3.0.6",
     "@types/lodash": "4.17.20",
+    "@types/node": "^24.5.0",
     "@types/npm": "^7.19.3",
     "@types/qs": "^6.14.0",
-    "@types/react": "19.1.12",
+    "@types/react": "^19.1.13",
     "@types/react-async-script": "^1.2.5",
-    "@types/react-dom": "19.1.9",
+    "@types/react-dom": "^19.1.9",
     "@types/react-modal": "^3.16.3",
     "@types/react-redux": "7.1.34",
     "@types/react-router-dom": "^5.3.3",
@@ -150,6 +151,7 @@
     "style-loader": "^4.0.0",
     "text-encoding": "^0.7.0",
     "ts-loader": "^9.5.4",
+    "typescript": "^5.9.2",
     "webpack-cli": "^6.0.1"
   },
   "msw": {
