--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,8 @@
     "module": "ESNext",
     "lib": [
       "dom",
+      "dom.iterable",
+      "esnext",
       "es2020",
       "es2021",
       "es2022",
